# signaljepa

./: .gitignore  Cargo.toml  README.md
examples/: benchmark.rs
src/: lib.rs  weights.rs
src/model/: conv_encoder.rs  mod.rs  signal_jepa.rs
tests/: forward_pass.rs  python_parity.rs
